fixed topbar layering using z-index

--- a/Website/styles.css
+++ b/Website/styles.css
@@ -74,6 +74,7 @@ body::-webkit-scrollbar{
 }
 
 .bar {
+  z-index: 1;
   top:0;
   position: fixed;
   width: 100%;
